# CuoTi

mistake_book/: .gitignore  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  install.bat  install.sh  run.py
mistake_book/dependencies/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
mistake_book/docs/: CHANGELOG.md  OCR使用指南.md  OCR功能总结.md  OCR未响应问题已解决.md  OCR模型下载问题已解决.md  Qt线程安全问题已解决.md  README.md  app_startup_freeze_fix.md  architecture.md  auto_ocr_on_drop.md  backend_services.md  card_click_interaction.md  card_fixed_height.md  chinese_path_fix.md  core_layer_analysis.md  data_flow_fix.md  database_cache_fix.md  database_design.md  delete_question_feature.md  deployment_complete.md  deployment_v2_complete.md  detail_dialog_ui_improvement.md  dev_setup.md  easyocr_dll_fix.md  easyocr_pyqt6_fix.md  editable_answer_in_detail.md  frontend_check_summary.md  gui_design.md  image_loading_fix.md  image_storage_management.md  image_upload_and_preview.md  integration.md  main_page_card_ui_improvement.md  move_models_to_other_drive.md  navigation_selection_persistence.md  ocr_async_loading.md  ocr_english_support_restored.md  ocr_implementation.md  ocr_lazy_loading.md  ocr_model_download_issue.md  (+34 more)
mistake_book/resources/: app.qrc
mistake_book/scripts/: README.md  build_exe.py  check_ocr_status.py  compile_resources.py  move_models_to_d_drive.bat  organize_tests.py  verify_deployment.py
mistake_book/tests/: README.md  test_full_integration.py
(+118 files in other folders)
